Fix bug #71266.  As much as we all dispise it window.focus() should raise windows on linux.  r=danm, sr=brendan